css/style.css
/* Roboto font by google-fonts */
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
  margin: 0; padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Roboto", sans-serif;
}
a {
  text-decoration: none;
  color: inherit;
}

/* layout */
.empty {
  flex: 1;
}
.content {
  width: 1000px;
}

/* top-layout */

.top-layout {
  display: flex;
  background-color: #1f2937;
}

/* header */

.header {
  padding: 20px 0;
}
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.header-logo {
  color: #f9faf8;
  font-size: 24px;
  font-weight: bold;
}
.header ul {
  display: flex;
  gap: 24px;
  color: #e5e7eb;
  font-size: 18px;
  font-weight: 300;
  list-style-type: none;
}

/* hero-text */

.hero {
  height: 400px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.hero-content {
  height: 220px;
  display: flex;
  justify-content: space-between;
  align-items: space-between;
  gap: 50px;
}
.left-side {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.left-side h1 {
  color: #f9faf8;
  font-size: 48px;
  font-weight: 900;
}
.left-side p {
  color: #e5e7eb;
  font-size: 18px;
  font-weight: 300;
}
.left-side button {
  padding: 8px 30px;
  border-radius: 12px;
  color: #f9faf8;
  font-size: 18px;
  font-weight: bold;
  background-color: #3882f6;
  border: none;
  align-self: flex-start;
}
.right-side {
  flex: 1;
  background-color: #ffffff7c;
}

/* info */

.layout-2 {
  display: flex;
}
.empty-2 {
  flex: 1;
}
.content-2 {
  width: 1000px;
}

.info {
  height: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.info-title {
  height: 120px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.info-title h2 {
  font-size: 36px;
  color: #1f2937;
  font-weight: 900;
}
.info ul {
  list-style-type: none;
  display: flex;
  gap: 60px;
}
.info li {
  width: 150px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.info .img-back{
  height: 150px;
  border: thick solid #3882f6;
  border-radius: 20px;
}

